[package]
name = "imxrt-ral-examples-teensy4"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
publish = false  # This is an example package

# The imxrt-ral dependency
#
# - Enable the 'imxrt1062' feature to specify the Teensy 4's processor
# - Enable the 'rt' feature when you're building the application
[dependencies.imxrt-ral]
path = "../.."
features = ["imxrt1062", "rt"]

# The cortex-m-rt crate provides the runtime; see its docs for information
# on features and requirements.
[dependencies.cortex-m-rt]
features = ["device"]
version = "0.7"

# This is an extra dependency that helps us boot the Teensy 4.
[dependencies.teensy4-fcb]
version = "0.3.0"

# A simple panic handler built for the Teensy 4.
[dependencies.teensy4-panic]
version = "0.1"

[dependencies.cortex-m-rtic]
version = "1.0"

[dependencies.cortex-m]
version = "0.7"

[[bin]]
name = "blink"
path = "blink.rs"

[[bin]]
name = "blink-nosync"
path = "blink-nosync.rs"
required-features = ["imxrt-ral/nosync"]

[[bin]]
name = "rtic-blink"
path = "rtic-blink.rs"
required-features = ["imxrt-ral/rtic"]
